Add navigation via buttons.

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,11 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Dark.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-
-        <item name="colorPrimary">@color/kio_turquoise</item>
-        <item name="colorPrimaryDark">@color/kio_hot_pink</item>
 
         <!-- sets cursor color -->
         <item name="colorControlActivated">@android:color/black</item>
