--- a/server/client/src/app/home/home.component.html
+++ b/server/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
     <h1>Home</h1>
-    <p>You're logged in with JWT!!</p>
+    <p>You're logged in with JWT!!!</p>
     <div>
         Users from secure api end point:
         <ul>
@@ -9,3 +9,9 @@
     </div>
     <p><a [routerLink]="['/login']">Logout</a></p>
 </div>
+
+<div>
+  <button md-raised-button class="md-accent md-hue-1" (click)="getPokemonInfo()">Get Pokemon info</button>
+  <button md-raised-button class="md-accent md-hue-1" (click)="getPokemonInfo1()">Get Pokemon info1</button>
+  <button md-raised-button class="md-accent md-hue-1" (click)="getPokemonInfo2()">Get Pokemon info2</button>
+</div>    
