--- a/server/client/src/app/login/login.component.html
+++ b/server/client/src/app/login/login.component.html
@@ -25,7 +25,7 @@
     </form>
 </div>
 
-<md-content>
+<div>
   <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
     <button md-button>{{title1}}</button>
     <button md-button md-no-ink class="md-primary">Primary (md-noink)</button>
@@ -94,4 +94,4 @@
     </a>
     <div class="label">Icon Button</div>
   </section>
-</md-content>
+</div>
